utils/CompiledFiles/TenseQuizParser.py
# Generated from TenseQuiz.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class TenseQuizParser ( Parser ):

    grammarFileName = "TenseQuiz.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'he'", "'she'", "'it'", "'i'", "'you'", 
                     "'we'", "'they'", "'is'", "'was'", "'am'", "'are'", 
                     "'were'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BE_PRESENT", "BE_PAST", "PRONOUN", "DETERMINER", 
                      "SINGULAR_NOUN", "PLURAL_NOUN", "THIRD_PERSON_PRESENT", 
                      "NON_THIRD_PERSON_PRESENT", "PAST", "FUTURE", "PAST_EXPRESSION", 
                      "NOW_EXPRESSION", "FUTURE_EXPRESSION", "PREPOSITION", 
                      "WORD", "UNDERSCORE", "PARENTHESES", "PUNCTUATION", 
                      "WS" ]

    RULE_answer = 0
    RULE_fill_in_the_blank = 1
    RULE_correct_sentence = 2
    RULE_subject_verb_pair = 3
    RULE_third_person_singular = 4
    RULE_non_third_person = 5
    RULE_any_subject = 6
    RULE_singular_noun_phrase = 7
    RULE_plural_noun_phrase = 8
    RULE_third_person_verb = 9
    RULE_non_third_person_verb = 10
    RULE_past_or_future_verb = 11
    RULE_verb = 12
    RULE_direct_object = 13
    RULE_optional_content = 14
    RULE_prepositional_phrase = 15
    RULE_expression = 16
    RULE_noun_phrase = 17

    ruleNames =  [ "answer", "fill_in_the_blank", "correct_sentence", "subject_verb_pair", 
                   "third_person_singular", "non_third_person", "any_subject", 
                   "singular_noun_phrase", "plural_noun_phrase", "third_person_verb", 
                   "non_third_person_verb", "past_or_future_verb", "verb", 
                   "direct_object", "optional_content", "prepositional_phrase", 
                   "expression", "noun_phrase" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    BE_PRESENT=13
    BE_PAST=14
    PRONOUN=15
    DETERMINER=16
    SINGULAR_NOUN=17
    PLURAL_NOUN=18
    THIRD_PERSON_PRESENT=19
    NON_THIRD_PERSON_PRESENT=20
    PAST=21
    FUTURE=22
    PAST_EXPRESSION=23
    NOW_EXPRESSION=24
    FUTURE_EXPRESSION=25
    PREPOSITION=26
    WORD=27
    UNDERSCORE=28
    PARENTHESES=29
    PUNCTUATION=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AnswerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def correct_sentence(self):
            return self.getTypedRuleContext(TenseQuizParser.Correct_sentenceContext,0)


        def fill_in_the_blank(self):
            return self.getTypedRuleContext(TenseQuizParser.Fill_in_the_blankContext,0)


        def getRuleIndex(self):
            return TenseQuizParser.RULE_answer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnswer" ):
                return visitor.visitAnswer(self)
            else:
                return visitor.visitChildren(self)




    def answer(self):

        localctx = TenseQuizParser.AnswerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_answer)
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TenseQuizParser.T__0, TenseQuizParser.T__1, TenseQuizParser.T__2, TenseQuizParser.T__3, TenseQuizParser.T__4, TenseQuizParser.T__5, TenseQuizParser.T__6, TenseQuizParser.DETERMINER, TenseQuizParser.SINGULAR_NOUN, TenseQuizParser.PLURAL_NOUN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.correct_sentence()
                pass
            elif token in [TenseQuizParser.BE_PRESENT, TenseQuizParser.BE_PAST, TenseQuizParser.THIRD_PERSON_PRESENT, TenseQuizParser.NON_THIRD_PERSON_PRESENT, TenseQuizParser.PAST, TenseQuizParser.FUTURE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.fill_in_the_blank()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fill_in_the_blankContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def verb(self):
            return self.getTypedRuleContext(TenseQuizParser.VerbContext,0)


        def getRuleIndex(self):
            return TenseQuizParser.RULE_fill_in_the_blank

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFill_in_the_blank" ):
                return visitor.visitFill_in_the_blank(self)
            else:
                return visitor.visitChildren(self)




    def fill_in_the_blank(self):

        localctx = TenseQuizParser.Fill_in_the_blankContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fill_in_the_blank)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.verb()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Correct_sentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subject_verb_pair(self):
            return self.getTypedRuleContext(TenseQuizParser.Subject_verb_pairContext,0)


        def direct_object(self):
            return self.getTypedRuleContext(TenseQuizParser.Direct_objectContext,0)


        def optional_content(self):
            return self.getTypedRuleContext(TenseQuizParser.Optional_contentContext,0)


        def expression(self):
            return self.getTypedRuleContext(TenseQuizParser.ExpressionContext,0)


        def PUNCTUATION(self):
            return self.getToken(TenseQuizParser.PUNCTUATION, 0)

        def getRuleIndex(self):
            return TenseQuizParser.RULE_correct_sentence

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCorrect_sentence" ):
                return visitor.visitCorrect_sentence(self)
            else:
                return visitor.visitChildren(self)




    def correct_sentence(self):

        localctx = TenseQuizParser.Correct_sentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_correct_sentence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.subject_verb_pair()
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 43
                self.direct_object()


            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TenseQuizParser.PREPOSITION or _la==TenseQuizParser.WORD:
                self.state = 46
                self.optional_content()


            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TenseQuizParser.PAST_EXPRESSION) | (1 << TenseQuizParser.NOW_EXPRESSION) | (1 << TenseQuizParser.FUTURE_EXPRESSION))) != 0):
                self.state = 49
                self.expression()


            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TenseQuizParser.PUNCTUATION:
                self.state = 52
                self.match(TenseQuizParser.PUNCTUATION)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subject_verb_pairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def third_person_singular(self):
            return self.getTypedRuleContext(TenseQuizParser.Third_person_singularContext,0)


        def third_person_verb(self):
            return self.getTypedRuleContext(TenseQuizParser.Third_person_verbContext,0)


        def non_third_person(self):
            return self.getTypedRuleContext(TenseQuizParser.Non_third_personContext,0)


        def non_third_person_verb(self):
            return self.getTypedRuleContext(TenseQuizParser.Non_third_person_verbContext,0)


        def any_subject(self):
            return self.getTypedRuleContext(TenseQuizParser.Any_subjectContext,0)


        def past_or_future_verb(self):
            return self.getTypedRuleContext(TenseQuizParser.Past_or_future_verbContext,0)


        def getRuleIndex(self):
            return TenseQuizParser.RULE_subject_verb_pair

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubject_verb_pair" ):
                return visitor.visitSubject_verb_pair(self)
            else:
                return visitor.visitChildren(self)




    def subject_verb_pair(self):

        localctx = TenseQuizParser.Subject_verb_pairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_subject_verb_pair)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.third_person_singular()
                self.state = 56
                self.third_person_verb()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.non_third_person()
                self.state = 59
                self.non_third_person_verb()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.any_subject()
                self.state = 62
                self.past_or_future_verb()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Third_person_singularContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singular_noun_phrase(self):
            return self.getTypedRuleContext(TenseQuizParser.Singular_noun_phraseContext,0)


        def getRuleIndex(self):
            return TenseQuizParser.RULE_third_person_singular

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThird_person_singular" ):
                return visitor.visitThird_person_singular(self)
            else:
                return visitor.visitChildren(self)




    def third_person_singular(self):

        localctx = TenseQuizParser.Third_person_singularContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_third_person_singular)
        self._la = 0 # Token type
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TenseQuizParser.T__0, TenseQuizParser.T__1, TenseQuizParser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TenseQuizParser.T__0) | (1 << TenseQuizParser.T__1) | (1 << TenseQuizParser.T__2))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [TenseQuizParser.DETERMINER, TenseQuizParser.SINGULAR_NOUN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.singular_noun_phrase()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_third_personContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plural_noun_phrase(self):
            return self.getTypedRuleContext(TenseQuizParser.Plural_noun_phraseContext,0)


        def getRuleIndex(self):
            return TenseQuizParser.RULE_non_third_person

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_third_person" ):
                return visitor.visitNon_third_person(self)
            else:
                return visitor.visitChildren(self)




    def non_third_person(self):

        localctx = TenseQuizParser.Non_third_personContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_non_third_person)
        self._la = 0 # Token type
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TenseQuizParser.T__3, TenseQuizParser.T__4, TenseQuizParser.T__5, TenseQuizParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TenseQuizParser.T__3) | (1 << TenseQuizParser.T__4) | (1 << TenseQuizParser.T__5) | (1 << TenseQuizParser.T__6))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [TenseQuizParser.DETERMINER, TenseQuizParser.PLURAL_NOUN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.plural_noun_phrase()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Any_subjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def third_person_singular(self):
            return self.getTypedRuleContext(TenseQuizParser.Third_person_singularContext,0)


        def non_third_person(self):
            return self.getTypedRuleContext(TenseQuizParser.Non_third_personContext,0)


        def getRuleIndex(self):
            return TenseQuizParser.RULE_any_subject

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAny_subject" ):
                return visitor.visitAny_subject(self)
            else:
                return visitor.visitChildren(self)




    def any_subject(self):

        localctx = TenseQuizParser.Any_subjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_any_subject)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.third_person_singular()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.non_third_person()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Singular_noun_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGULAR_NOUN(self):
            return self.getToken(TenseQuizParser.SINGULAR_NOUN, 0)

        def DETERMINER(self):
            return self.getToken(TenseQuizParser.DETERMINER, 0)

        def getRuleIndex(self):
            return TenseQuizParser.RULE_singular_noun_phrase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingular_noun_phrase" ):
                return visitor.visitSingular_noun_phrase(self)
            else:
                return visitor.visitChildren(self)




    def singular_noun_phrase(self):

        localctx = TenseQuizParser.Singular_noun_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_singular_noun_phrase)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TenseQuizParser.DETERMINER:
                self.state = 78
                self.match(TenseQuizParser.DETERMINER)


            self.state = 81
            self.match(TenseQuizParser.SINGULAR_NOUN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Plural_noun_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLURAL_NOUN(self):
            return self.getToken(TenseQuizParser.PLURAL_NOUN, 0)

        def DETERMINER(self):
            return self.getToken(TenseQuizParser.DETERMINER, 0)

        def getRuleIndex(self):
            return TenseQuizParser.RULE_plural_noun_phrase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlural_noun_phrase" ):
                return visitor.visitPlural_noun_phrase(self)
            else:
                return visitor.visitChildren(self)




    def plural_noun_phrase(self):

        localctx = TenseQuizParser.Plural_noun_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_plural_noun_phrase)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TenseQuizParser.DETERMINER:
                self.state = 83
                self.match(TenseQuizParser.DETERMINER)


            self.state = 86
            self.match(TenseQuizParser.PLURAL_NOUN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Third_person_verbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def THIRD_PERSON_PRESENT(self):
            return self.getToken(TenseQuizParser.THIRD_PERSON_PRESENT, 0)

        def getRuleIndex(self):
            return TenseQuizParser.RULE_third_person_verb

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThird_person_verb" ):
                return visitor.visitThird_person_verb(self)
            else:
                return visitor.visitChildren(self)




    def third_person_verb(self):

        localctx = TenseQuizParser.Third_person_verbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_third_person_verb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TenseQuizParser.T__7) | (1 << TenseQuizParser.T__8) | (1 << TenseQuizParser.THIRD_PERSON_PRESENT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_third_person_verbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NON_THIRD_PERSON_PRESENT(self):
            return self.getToken(TenseQuizParser.NON_THIRD_PERSON_PRESENT, 0)

        def getRuleIndex(self):
            return TenseQuizParser.RULE_non_third_person_verb

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_third_person_verb" ):
                return visitor.visitNon_third_person_verb(self)
            else:
                return visitor.visitChildren(self)




    def non_third_person_verb(self):

        localctx = TenseQuizParser.Non_third_person_verbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_non_third_person_verb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TenseQuizParser.T__9) | (1 << TenseQuizParser.T__10) | (1 << TenseQuizParser.T__11) | (1 << TenseQuizParser.NON_THIRD_PERSON_PRESENT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Past_or_future_verbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAST(self):
            return self.getToken(TenseQuizParser.PAST, 0)

        def FUTURE(self):
            return self.getToken(TenseQuizParser.FUTURE, 0)

        def getRuleIndex(self):
            return TenseQuizParser.RULE_past_or_future_verb

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPast_or_future_verb" ):
                return visitor.visitPast_or_future_verb(self)
            else:
                return visitor.visitChildren(self)




    def past_or_future_verb(self):

        localctx = TenseQuizParser.Past_or_future_verbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_past_or_future_verb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not(_la==TenseQuizParser.PAST or _la==TenseQuizParser.FUTURE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def THIRD_PERSON_PRESENT(self):
            return self.getToken(TenseQuizParser.THIRD_PERSON_PRESENT, 0)

        def NON_THIRD_PERSON_PRESENT(self):
            return self.getToken(TenseQuizParser.NON_THIRD_PERSON_PRESENT, 0)

        def PAST(self):
            return self.getToken(TenseQuizParser.PAST, 0)

        def FUTURE(self):
            return self.getToken(TenseQuizParser.FUTURE, 0)

        def BE_PRESENT(self):
            return self.getToken(TenseQuizParser.BE_PRESENT, 0)

        def BE_PAST(self):
            return self.getToken(TenseQuizParser.BE_PAST, 0)

        def getRuleIndex(self):
            return TenseQuizParser.RULE_verb

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVerb" ):
                return visitor.visitVerb(self)
            else:
                return visitor.visitChildren(self)




    def verb(self):

        localctx = TenseQuizParser.VerbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_verb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TenseQuizParser.BE_PRESENT) | (1 << TenseQuizParser.BE_PAST) | (1 << TenseQuizParser.THIRD_PERSON_PRESENT) | (1 << TenseQuizParser.NON_THIRD_PERSON_PRESENT) | (1 << TenseQuizParser.PAST) | (1 << TenseQuizParser.FUTURE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Direct_objectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def noun_phrase(self):
            return self.getTypedRuleContext(TenseQuizParser.Noun_phraseContext,0)


        def singular_noun_phrase(self):
            return self.getTypedRuleContext(TenseQuizParser.Singular_noun_phraseContext,0)


        def plural_noun_phrase(self):
            return self.getTypedRuleContext(TenseQuizParser.Plural_noun_phraseContext,0)


        def getRuleIndex(self):
            return TenseQuizParser.RULE_direct_object

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirect_object" ):
                return visitor.visitDirect_object(self)
            else:
                return visitor.visitChildren(self)




    def direct_object(self):

        localctx = TenseQuizParser.Direct_objectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_direct_object)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.noun_phrase()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.singular_noun_phrase()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.plural_noun_phrase()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Optional_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prepositional_phrase(self):
            return self.getTypedRuleContext(TenseQuizParser.Prepositional_phraseContext,0)


        def WORD(self):
            return self.getToken(TenseQuizParser.WORD, 0)

        def getRuleIndex(self):
            return TenseQuizParser.RULE_optional_content

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptional_content" ):
                return visitor.visitOptional_content(self)
            else:
                return visitor.visitChildren(self)




    def optional_content(self):

        localctx = TenseQuizParser.Optional_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_optional_content)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TenseQuizParser.PREPOSITION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.prepositional_phrase()
                pass
            elif token in [TenseQuizParser.WORD]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(TenseQuizParser.WORD)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prepositional_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREPOSITION(self):
            return self.getToken(TenseQuizParser.PREPOSITION, 0)

        def PRONOUN(self, i:int=None):
            if i is None:
                return self.getTokens(TenseQuizParser.PRONOUN)
            else:
                return self.getToken(TenseQuizParser.PRONOUN, i)
